manifests/03-monitoring/dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true
