manifests/03-monitoring/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8s.charana.dev`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: kubernetes-dashboard
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s.charana.dev`)
      kind: Rule
      middlewares:
        - name: dashboard-auth
          namespace: kubernetes-dashboard
      services:
        - name: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: dashboard-transport
  tls:
    secretName: k8s-charana-dev-tls
